--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,59 @@
           initial-scale=1.0,
           maximum-scale=1.0,
           minimum-scale=1.0">
-    <title>Dia</title>
+    <title>Rosland IRA</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700,800,900|Roboto+Slab:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
+    <header class="header container">
+      <img class="header__logo" src="./images/logo.png" alt="logo">
+      <div class="header__contact">
+        <p class="header__text">Get a Quote</p>
+        <a href="tel:1 800 679 6482" class="header__phone">1-800-679-6482</a>
+      </div>
+    </header>
+
     <div class="hero">
-      <h1>ViCtor</h1>
+      <div class="container hero--container">
+        <div class="hero__aside-left">
+          <img class="hero__photo" src="./images/william-devane.png" alt="william devane">
+          <p class="hero__moto">
+            You’ve worked hard for your money and you don't want to lose it now,
+            so protect it with a Rosland Capital precious metal backed IRA.
+            <span>– William DeVane</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="contact-form container">
+      <div class="contact-form__aside-left">
+        <h1 class="contact-form__title">Rosland Capital Precious Metal IRA</h1>
+        <p class="contact-form__text">
+          With non-performing paper assets funding the majority of the individual retirement accounts and the
+          potential shortfall in Social Security, a well-diversified retirement plan should include precious metals.
+          Precious metals like GOLD are one of the few assets that have demonstrated the ability to retain value
+          when other investments fall short.
+        </p>
+        <p class="contact-form__text">
+          Call now to get a free IRA transfer kit and for limited time only transferring or rolling over your IRA
+          is free for new customers! <span>1.800.679.6482</span>
+        </p>
+      </div>
+      <div class="contact-form__aside-rigth">
+      </div>
+    </div>
+
+    <div class="phone">
+      <p class="phone__text">
+        For a complete list of available coins call:
+        <a href="tel:1 800 679 6482" class="phone__phone">1-800-679-6482</a>
+      </p>
+    </div>
+
+    <div class="coins container">
+
     </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
